# dotcompass

./: .gitignore  CONTRIBUTING.md  DEPLOY.md  GOAL.md  LICENSE  Makefile  PLAN.md  README.md  index.html  pyproject.toml
app/: .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/scripts/: embed.mjs
app/src/: App.test.tsx  App.tsx  config.ts  index.css  main.tsx  states.generated.ts  states.ts  types.ts
assets/: index-DTWJXUCu.css  index-DpYdx913.js  transformers.web-Bw1_7-Vi.js
data/: ask-corpus.json  embeddings.json  index.json
data/history/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/requirements/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/sections/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/national/: ADR-multi-state-app.md  AGENT_PLAYBOOK.md  EXPANSION.md  catalog.json  recon-workflow.js  (+1 more)
pipeline/: build_app_data.py  build_app_states.py  build_ask_corpus.py  build_history.py  build_manuals.py  build_state.py  diff_2025_2026.json  diff_editions.py  embed_corpus.mjs  extract_requirements.py  history.json  ingest_manual.py  ingest_standard_plans.py  manuals.py  out_2025.json  out_2026.json  parse_any_edition.py  parse_specs.py  requirements.json
tests/: conftest.py  test_aashto_profile.py  test_corpus_integration.py  test_heading_detection.py  test_history.py  test_requirements.py  test_section_numbers.py  test_state_descriptor.py
worker/: package-lock.json  wrangler.toml
(+67 files in other folders)
